feat: add a refresh token, authorization using token, updated token to rsa256

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,34 +1,87 @@
+# Application Base URL
 app.baseUrl=
+
+# MongoDB Configuration
 quarkus.mongodb.connection-string=
 quarkus.mongodb.database=
+
+# Security Configuration
 quarkus.security.auth.enabled=true
-quarkus.live-reload.instrumentation=true
 jwt.secret=
+smallrye.jwt.always-check-signature=true
+quarkus.smallrye-jwt.blocking-authentication=false
+quarkus.smallrye-jwt.silent=false
+mp.jwt.verify.algorithm=
+mp.jwt.token.header=Authorization
+smallrye.jwt.token.schemes=Bearer
+quarkus.security.jwt.enabled=true
+quarkus.security.jwt.auth-mechanism=JWT
+
+# Public Key Location (for verification)
+smallrye.jwt.verify.key.location=
+
+# Private Key (development purposes)
+dev.private.key.location=
+mp.jwt.verify.privatekey.location=
+
+# Logging Configuration
+
+
+# CORS Configuration for Angular
+quarkus.http.cors=true
+quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.headers=*
+quarkus.http.cors.credentials=true
+quarkus.http.cors.origins=
+quarkus.http.cors.exposed-headers=Content-Type
+
+# Hashing Configuration
+quarkus.security.password.bcrypt.log-rounds=10
 
 # Mail Configuration
 quarkus.mailer.from=
-quarkus.mailer.host=smtp.gmail.com
-quarkus.mailer.port=587
+quarkus.mailer.host=
+quarkus.mailer.port=
 quarkus.mailer.username=
 quarkus.mailer.password=
 quarkus.mailer.ssl=false
 quarkus.mailer.starttls=true
 quarkus.mailer.mock=false
 
+# Swagger UI Configuration
+quarkus.swagger-ui.auth.enabled=false
+quarkus.swagger-ui.auth.type=JWT
+quarkus.swagger-ui.auth.token-header-name=Authorization
+quarkus.swagger-ui.auth.token-prefix=Bearer
+quarkus.swagger-ui.enable=true
 
-# Hashing Configuration
-quarkus.security.password.bcrypt.log-rounds=10
+# OpenAPI Security Scheme Configuration
+#quarkus.openapi.security-scheme.bearerAuth.type=apiKey
+#quarkus.openapi.security-scheme.bearerAuth.in=header
+#quarkus.openapi.security-scheme.bearerAuth.name=Authorization
 
-#Enable CORS for Angular
-quarkus.http.cors=true
-quarkus.http.cors.methods=GET,POST,PUT,DELETE,OPTIONS
-quarkus.http.cors.access-control-allow-credentials=true
-quarkus.http.cors.headers=*
-quarkus.http.cors.credentials=true
-quarkus.http.cors.origins=*
-quarkus.http.cors.exposed-headers=Content-Type
+quarkus.smallrye-openapi.security-scheme-name=Authorization
+quarkus.smallrye-openapi.security-scheme-type=http
+quarkus.smallrye-openapi.security-scheme-http-scheme=bearer
+#quarkus.smallrye-openapi.security-scheme-http-bearer-format=JWT
 
-#Container builder
-quarkus.container-image.builder=docker
-quarkus.native.remote-container-build=false
-quarkus.container-image.build=false
+# Live Reload Configuration
+quarkus.live-reload.instrumentation=false
+
+# Container Builder Configuration (Commented Out)
+# quarkus.container-image.builder=docker
+# quarkus.native.remote-container-build=false
+# quarkus.container-image.build=false
+# quarkus.native.container-build=false
+# quarkus.native.enabled=false
+# quarkus.testcontainers.enabled=false
+
+
+#PRODUCTION LOGS
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.file.enable=true
+quarkus.log.file.path=./logs/application.log
+quarkus.log.file.rotation.max-file-size=10M
+quarkus.log.file.rotation.max-backup-index=5
+quarkus.log.level=INFO
