--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -70,12 +70,12 @@ quarkus.smallrye-openapi.security-scheme-http-scheme=bearer
 quarkus.live-reload.instrumentation=false
 
 # Container Builder Configuration (Commented Out)
-# quarkus.container-image.builder=docker
-# quarkus.native.remote-container-build=false
-# quarkus.container-image.build=false
-# quarkus.native.container-build=false
-# quarkus.native.enabled=false
-# quarkus.testcontainers.enabled=false
+ quarkus.container-image.builder=docker
+ quarkus.native.remote-container-build=true
+ quarkus.container-image.build=true
+ quarkus.native.container-build=true
+ quarkus.native.enabled=true
+ quarkus.testcontainers.enabled=false
 
 
 #PRODUCTION LOGS
