fix: adds a docker fix

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,10 +71,10 @@ quarkus.live-reload.instrumentation=false
 
 # Container Builder Configuration (Commented Out)
  quarkus.container-image.builder=docker
- quarkus.native.remote-container-build=true
+ quarkus.native.remote-container-build=false
  quarkus.container-image.build=true
- quarkus.native.container-build=true
- quarkus.native.enabled=true
+ quarkus.native.container-build=false
+ quarkus.native.enabled=false
  quarkus.testcontainers.enabled=false
 
 
