fix: add testing fix after docker

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,6 @@ smallrye.jwt.token.schemes=Bearer
 quarkus.security.jwt.enabled=true
 quarkus.security.jwt.auth-mechanism=JWT
 
-# Public Key Location (for verification)
-smallrye.jwt.verify.key.location=
 
 # Private Key (development purposes)
 dev.private.key.location=
@@ -41,7 +39,7 @@ quarkus.security.password.bcrypt.log-rounds=10
 
 # Mail Configuration
 quarkus.mailer.from=
-quarkus.mailer.host=
+quarkus.mailer.host=smtp.gmail.com
 quarkus.mailer.port=
 quarkus.mailer.username=
 quarkus.mailer.password=
@@ -69,13 +67,12 @@ quarkus.smallrye-openapi.security-scheme-http-scheme=bearer
 # Live Reload Configuration
 quarkus.live-reload.instrumentation=false
 
-# Container Builder Configuration (Commented Out)
- quarkus.container-image.builder=docker
- quarkus.native.remote-container-build=false
- quarkus.container-image.build=true
- quarkus.native.container-build=false
- quarkus.native.enabled=false
- quarkus.testcontainers.enabled=false
+## Container Builder Configuration (Commented Out)
+quarkus.container-image.builder=none
+quarkus.devservices.enabled=false
+# OR
+
+quarkus.datasource.devservices.enabled=false
 
 
 #PRODUCTION LOGS
